Modified to resolve environment error resulting from changes in a dependency.

--- a/LatentSync.ipynb
+++ b/LatentSync.ipynb
@@ -19,7 +19,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**PREPARE ENVIRONMENT**"
+        "**PREPARE ENVIRONMENT**\n",
+        "- Due to changes in some dependencies, you will be prompted to restart the session after all the required libraries are installed. Simply restart and run this section again."
       ],
       "metadata": {
         "id": "QK_OVw3gVDCZ"
@@ -36,14 +37,15 @@
       "outputs": [],
       "source": [
         "# @title\n",
-        "!pip install diffusers mediapipe>=0.10.8 transformers huggingface-hub omegaconf\n",
-        "!pip install einops opencv-python face-alignment decord ffmpeg-python\n",
-        "!pip install safetensors soundfile\n",
-        "\n",
-        "!git clone https://github.com/Isi-dev/LatentSync\n",
-        "%cd LatentSync\n",
+        "!pip install diffusers mediapipe transformers huggingface-hub omegaconf einops opencv-python face-alignment decord ffmpeg-python safetensors soundfile\n",
         "\n",
         "import os\n",
+        "import subprocess\n",
+        "\n",
+        "if not os.path.exists(\"LatentSync\"):\n",
+        "    !git clone https://github.com/Isi-dev/LatentSync\n",
+        "%cd LatentSync\n",
+        "\n",
         "from google.colab import files\n",
         "import torch\n",
         "from omegaconf import OmegaConf\n",
@@ -56,19 +58,31 @@
         "import ipywidgets as widgets\n",
         "\n",
         "os.makedirs(\"/root/.cache/torch/hub/checkpoints\", exist_ok=True)\n",
+        "os.makedirs(\"checkpoints\", exist_ok=True)\n",
         "\n",
-        "!wget https://huggingface.co/Isi99999/LatentSync/resolve/main/auxiliary/s3fd-619a316812.pth -O /root/.cache/torch/hub/checkpoints/s3fd-619a316812.pth\n",
-        "!wget https://huggingface.co/Isi99999/LatentSync/resolve/main/auxiliary/2DFAN4-cd938726ad.zip -O /root/.cache/torch/hub/checkpoints/2DFAN4-cd938726ad.zip\n",
+        "model_urls = {\n",
+        "    \"/root/.cache/torch/hub/checkpoints/s3fd-619a316812.pth\":\n",
+        "        \"https://huggingface.co/Isi99999/LatentSync/resolve/main/auxiliary/s3fd-619a316812.pth\",\n",
+        "    \"/root/.cache/torch/hub/checkpoints/2DFAN4-cd938726ad.zip\":\n",
+        "        \"https://huggingface.co/Isi99999/LatentSync/resolve/main/auxiliary/2DFAN4-cd938726ad.zip\",\n",
+        "    \"checkpoints/latentsync_unet.pt\":\n",
+        "        \"https://huggingface.co/Isi99999/LatentSync/resolve/main/latentsync_unet.pt\",\n",
+        "    \"checkpoints/tiny.pt\":\n",
+        "        \"https://huggingface.co/Isi99999/LatentSync/resolve/main/whisper/tiny.pt\",\n",
+        "    \"checkpoints/diffusion_pytorch_model.safetensors\":\n",
+        "        \"https://huggingface.co/stabilityai/sd-vae-ft-mse/resolve/main/diffusion_pytorch_model.safetensors\",\n",
+        "    \"checkpoints/config.json\":\n",
+        "        \"https://huggingface.co/stabilityai/sd-vae-ft-mse/raw/main/config.json\",\n",
+        "}\n",
         "\n",
-        "!mkdir -p checkpoints\n",
+        "for file_path, url in model_urls.items():\n",
+        "    if not os.path.exists(file_path):\n",
+        "        print(f\"Downloading {file_path} ...\")\n",
+        "        subprocess.run([\"wget\", url, \"-O\", file_path], check=True)\n",
+        "    else:\n",
+        "        print(f\"File {file_path} already exists. Skipping download.\")\n",
         "\n",
-        "!wget https://huggingface.co/Isi99999/LatentSync/resolve/main/latentsync_unet.pt -O checkpoints/latentsync_unet.pt\n",
-        "!wget https://huggingface.co/Isi99999/LatentSync/resolve/main/whisper/tiny.pt -O checkpoints/tiny.pt\n",
-        "!wget https://huggingface.co/stabilityai/sd-vae-ft-mse/resolve/main/diffusion_pytorch_model.safetensors -O checkpoints/diffusion_pytorch_model.safetensors\n",
-        "!wget https://huggingface.co/stabilityai/sd-vae-ft-mse/raw/main/config.json -O checkpoints/config.json\n",
-        "\n",
-        "\n",
-        "\n",
+        "print(\"Setup complete.\")\n",
         "\n",
         "def perform_inference(video_path, audio_path, seed=1247, num_inference_steps=20, guidance_scale=1.0, output_path=\"output_video.mp4\"):\n",
         "    config_path = \"configs/unet/first_stage.yaml\"\n",
@@ -318,7 +332,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**RUN VIDEO TO VIDEO**"
+        "**RUN VIDEO TO VIDEO**\n",
+        "- If the input video is shorter than the audio, it will be looped to match the audio's length. To make the video play in reverse order after reaching the end, check the `loop_vid_from_endframe` box. If the input video is already a seamless loop, leave this box unchecked."
       ],
       "metadata": {
         "id": "5SZG7y6OVOQv"
@@ -335,7 +350,7 @@
         "import subprocess\n",
         "import os\n",
         "import ffmpeg\n",
-        "\n",
+        "loop_vid_from_endframe = False # @param {\"type\":\"boolean\"}\n",
         "\n",
         "def convert_video_fps(input_path, target_fps):\n",
         "    if not os.path.exists(input_path) or os.path.getsize(input_path) == 0:\n",
@@ -428,8 +443,10 @@
         "\n",
         "    while total_duration < target_duration:\n",
         "        extensions += 1\n",
-        "        # reversed_clip = reverse_video(clips[-1], audio_exists)\n",
-        "        clips.append(clips[-1])\n",
+        "        if loop_vid_from_endframe:\n",
+        "            reversed_clip = reverse_video(clips[-1], audio_exists)\n",
+        "            clips.append(reversed_clip)\n",
+        "        else: clips.append(clips[-1])\n",
         "        total_duration += original_duration\n",
         "\n",
         "    print(f\"The video was extended {extensions} time(s)\")\n",
