Updated to improve Memory Management. Longer Videos can be generated for free.

--- a/LTX_Video_Img_to_Vid.ipynb
+++ b/LTX_Video_Img_to_Vid.ipynb
@@ -109,33 +109,28 @@
         "vae_decode = VAEDecode()\n",
         "\n",
         "# if not Always_Load_Models_for_Inference:\n",
-        "with torch.inference_mode():\n",
-        "    # Load models\n",
-        "    print(\"Loading Model...\")\n",
-        "    model, _, vae = checkpoint_loader.load_checkpoint(\"ltx-video-2b-v0.9.5.safetensors\")\n",
-        "    print(\"Loaded model!\")\n",
-        "    print(\"Loading Text_Encoder...\")\n",
-        "    # if Use_t5xxl_fp16:\n",
-        "    #     clip = clip_loader.load_clip(\"t5xxl_fp16.safetensors\", \"ltxv\", \"default\")[0]\n",
-        "    # else:\n",
-        "    clip = clip_loader.load_clip(\"t5xxl_fp8_e4m3fn_scaled.safetensors\", \"ltxv\", \"default\")[0]\n",
-        "    print(\"Loaded Text_Encoder!\")\n",
+        "# with torch.inference_mode():\n",
+        "#     # Load models\n",
+        "#     print(\"Loading Model...\")\n",
+        "#     model, _, vae = checkpoint_loader.load_checkpoint(\"ltx-video-2b-v0.9.5.safetensors\")\n",
+        "#     print(\"Loaded model!\")\n",
+        "#     print(\"Loading Text_Encoder...\")\n",
+        "#     # if Use_t5xxl_fp16:\n",
+        "#     #     clip = clip_loader.load_clip(\"t5xxl_fp16.safetensors\", \"ltxv\", \"default\")[0]\n",
+        "#     # else:\n",
+        "#     clip = clip_loader.load_clip(\"t5xxl_fp8_e4m3fn_scaled.safetensors\", \"ltxv\", \"default\")[0]\n",
+        "#     print(\"Loaded Text_Encoder!\")\n",
         "\n",
         "def clear_gpu_memory():\n",
-        "    import gc\n",
-        "    import torch\n",
+        "    gc.collect()\n",
+        "    if torch.cuda.is_available():\n",
+        "        torch.cuda.empty_cache()\n",
+        "        torch.cuda.ipc_collect()\n",
+        "    for obj in list(globals().values()):\n",
+        "        if torch.is_tensor(obj) or (hasattr(obj, \"data\") and torch.is_tensor(obj.data)):\n",
+        "            del obj\n",
         "\n",
         "    gc.collect()\n",
-        "    torch.cuda.empty_cache()\n",
-        "    torch.cuda.ipc_collect()\n",
-        "\n",
-        "    # if Always_Load_Models_for_Inference:\n",
-        "    #     for var_name in [\"model\", \"vae\", \"clip\"]:\n",
-        "    #         if var_name in globals():\n",
-        "    #             del globals()[var_name]\n",
-        "\n",
-        "    gc.collect()\n",
-        "    torch.cuda.empty_cache()\n",
         "\n",
         "\n",
         "def upload_image():\n",
@@ -173,7 +168,10 @@
         "    length: int = 24,  # Number of frames\n",
         "    fps: int = 24\n",
         "):\n",
-        "    \"\"\"Generate a video from an uploaded image using LTX-Video model\"\"\"\n",
+        "    with torch.inference_mode():\n",
+        "        print(\"Loading Text_Encoder...\")\n",
+        "        clip = clip_loader.load_clip(\"t5xxl_fp8_e4m3fn_scaled.safetensors\", \"ltxv\", \"default\")[0]\n",
+        "        print(\"Loaded Text_Encoder!\")\n",
         "    try:\n",
         "\n",
         "        # if Always_Load_Models_for_Inference:\n",
@@ -194,6 +192,11 @@
         "        positive = clip_encode_positive.encode(clip, positive_prompt)[0]\n",
         "        negative = clip_encode_negative.encode(clip, negative_prompt)[0]\n",
         "\n",
+        "        del clip\n",
+        "        torch.cuda.empty_cache()\n",
+        "        gc.collect()\n",
+        "        print(\"Text_Encoder removed from memory\")\n",
+        "\n",
         "        if image_path is None:\n",
         "            print(\"Please upload an image file:\")\n",
         "            image_path = upload_image()\n",
@@ -201,6 +204,10 @@
         "            print(\"No image uploaded!\")\n",
         "        loaded_image = load_image.load_image(image_path)[0]\n",
         "        processed_image = preprocess.preprocess(loaded_image, 40)[0]\n",
+        "\n",
+        "        print(\"Loading model & VAE...\")\n",
+        "        model, _, vae = checkpoint_loader.load_checkpoint(\"ltx-video-2b-v0.9.5.safetensors\")\n",
+        "        print(\"Loaded model & VAE!\")\n",
         "\n",
         "        video_output = img_to_video.generate(\n",
         "            positive=positive,\n",
@@ -217,6 +224,8 @@
         "        selected_sampler = sampler_select.get_sampler(sampler_name)[0]\n",
         "        conditioned = conditioning.append(video_output[0], video_output[1], 25.0)\n",
         "\n",
+        "        print(\"Generating video...\")\n",
+        "\n",
         "        sampled = sampler.sample(\n",
         "            model=model,\n",
         "            add_noise=True,\n",
@@ -230,11 +239,21 @@
         "        )[0]\n",
         "\n",
         "        # model_management.soft_empty_cache()\n",
+        "        del model\n",
+        "        torch.cuda.empty_cache()\n",
+        "        gc.collect()\n",
+        "        print(\"Model removed from memory\")\n",
         "\n",
         "        with torch.no_grad():\n",
         "            try:\n",
+        "                print(\"Decodimg Latents...\")\n",
         "                decoded = vae_decode.decode(vae, sampled)[0].detach()\n",
         "                # print(f\"Decoded frames shape: {decoded.shape}\")\n",
+        "                print(\"Latents Decoded!\")\n",
+        "                del vae\n",
+        "                torch.cuda.empty_cache()\n",
+        "                gc.collect()\n",
+        "                print(\"VAE removed from memory\")\n",
         "            except Exception as e:\n",
         "                print(f\"Error during decoding: {str(e)}\")\n",
         "                raise\n",
@@ -287,10 +306,10 @@
       "cell_type": "code",
       "source": [
         "# @title Run Image to Video\n",
-        "positive_prompt = \"A red fox moving gracefully, its russet coat vibrant against the white landscape, leaving perfect star-shaped prints behind as steam rises from its breath in the crisp winter air. The scene is wrapped in snow-muffled silence, broken only by the gentle murmur of water still flowing beneath the ice.\" # @param {\"type\":\"string\"}\n",
+        "positive_prompt = \"The woman walks forward towards the camera and smiles.\" # @param {\"type\":\"string\"}\n",
         "negative_prompt = \"low quality, worst quality, deformed, distorted, disfigured, motion smear, motion artifacts, fused fingers, bad anatomy, weird hand, ugly\" # @param {\"type\":\"string\"}\n",
-        "width = 704 # @param {\"type\":\"number\"}\n",
-        "height = 480 # @param {\"type\":\"number\"}\n",
+        "width = 768 # @param {\"type\":\"number\"}\n",
+        "height = 512 # @param {\"type\":\"number\"}\n",
         "seed = 1000 # @param {\"type\":\"integer\"}\n",
         "steps = 20 # @param {\"type\":\"integer\", \"min\":1, \"max\":100}\n",
         "cfg_scale = 2.5 # @param {\"type\":\"number\", \"min\":1, \"max\":20}\n",
