Updated to include the `LoRA_Strength` option.

--- a/Wan2_1_14B_I2V_GGUF_&_LoRA.ipynb
+++ b/Wan2_1_14B_I2V_GGUF_&_LoRA.ipynb
@@ -57,7 +57,7 @@
         "\n",
         "lora_hf_download_url = \"https://huggingface.co/Remade-AI/Rotate/resolve/main/rotate_20_epochs.safetensors\"# @param {\"type\":\"string\"}\n",
         "download_lora_from_civitai = False # @param {\"type\":\"boolean\"}\n",
-        "lora_civitai_download_url = \"https://civitai.com/api/download/models/1523247?type=Model&format=SafeTensor\"# @param {\"type\":\"string\"}\n",
+        "lora_civitai_download_url = \"https://civitai.com/api/download/models/1542806?type=Model&format=SafeTensor\"# @param {\"type\":\"string\"}\n",
         "civitai_token = \"Put your civitai token here\"# @param {\"type\":\"string\"}\n",
         "\n",
         "def download_with_aria2c(link, folder=\"/content/ComfyUI/models/loras\"):\n",
@@ -289,6 +289,7 @@
         "\n",
         "def generate_video(\n",
         "    image_path: str = None,\n",
+        "    LoRA_Strength: float = 1.00,\n",
         "    positive_prompt: str = \"a cute anime girl with massive fennec ears and a big fluffy tail wearing a maid outfit turning around\",\n",
         "    negative_prompt: str = \"色调艳丽，过曝，静态，细节模糊不清，字幕，风格，作品，画作，画面，静止，整体发灰，最差质量，低质量，JPEG压缩残留，丑陋的，残缺的，多余的手指，画得不好的手部，画得不好的脸部，畸形的，毁容的，形态畸形的肢体，手指融合，静止不动的画面，杂乱的背景，三条腿，背景人很多，倒着走\",\n",
         "    width: int = 832,\n",
@@ -342,7 +343,7 @@
         "        model = model_sampling.patch(model, 8)[0]\n",
         "\n",
         "        print(\"Loading Lora...\")\n",
-        "        model = load_lora.load_lora_model_only(model, lora, 1.00)[0]\n",
+        "        model = load_lora.load_lora_model_only(model, lora, LoRA_Strength)[0]\n",
         "\n",
         "        print(\"Generating video...\")\n",
         "        sampled = ksampler.sample(\n",
@@ -444,6 +445,7 @@
       "source": [
         "# @title Generate Video\n",
         "\n",
+        "LoRA_Strength = 1.0 # @param {\"type\":\"slider\",\"min\":-100,\"max\":100,\"step\":0.01}\n",
         "positive_prompt = \"Anime girl with massive fennec ears and a big fluffy tail wearing a maid outfit performs a r0t4tion 360 degrees rotation.\" # @param {\"type\":\"string\"}\n",
         "negative_prompt = \"色调艳丽，过曝，静态，细节模糊不清，字幕，风格，作品，画作，画面，静止，整体发灰，最差质量，低质量，JPEG压缩残留，丑陋的，残缺的，多余的手指，画得不好的手部，画得不好的脸部，畸形的，毁容的，形态畸形的肢体，手指融合，静止不动的画面，杂乱的背景，三条腿，背景人很多，倒着走\" # @param {\"type\":\"string\"}\n",
         "width = 512 # @param {\"type\":\"number\"}\n",
@@ -464,6 +466,7 @@
         "# with torch.inference_mode():\n",
         "generate_video(\n",
         "    image_path=None,\n",
+        "    LoRA_Strength=LoRA_Strength,\n",
         "    positive_prompt=positive_prompt,\n",
         "    negative_prompt=negative_prompt,\n",
         "    width=width,\n",
