Modified to let users decide if to overwrite previous generations in a colab session.

--- a/Wan2_1_14B_I2V_GGUF_&_LoRA.ipynb
+++ b/Wan2_1_14B_I2V_GGUF_&_LoRA.ipynb
@@ -301,7 +301,8 @@
         "    scheduler: str = \"simple\",\n",
         "    frames: int = 33,\n",
         "    fps: int = 16,\n",
-        "    output_format: str = \"mp4\"\n",
+        "    output_format: str = \"mp4\",\n",
+        "    overwrite: bool = False\n",
         "):\n",
         "\n",
         "    with torch.inference_mode():\n",
@@ -388,8 +389,17 @@
         "                        quality=10\n",
         "                    )\n",
         "                elif output_format.lower() == \"mp4\":\n",
+        "\n",
         "                    print(\"Saving as MP4...\")\n",
-        "                    output_path = save_as_mp4(decoded, \"ComfyUI\", fps)\n",
+        "                    import datetime\n",
+        "                    base_name = \"ComfyUI\"\n",
+        "                    if not overwrite:\n",
+        "                        timestamp = datetime.datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
+        "                        base_name += f\"_{timestamp}\"\n",
+        "\n",
+        "                    output_path = save_as_mp4(decoded, base_name, fps)\n",
+        "\n",
+        "                    # output_path = save_as_mp4(decoded, \"ComfyUI\", fps)\n",
         "                else:\n",
         "                    raise ValueError(f\"Unsupported output format: {output_format}\")\n",
         "\n",
@@ -458,6 +468,7 @@
         "frames = 49 # @param {\"type\":\"integer\", \"min\":1, \"max\":120}\n",
         "fps = 16 # @param {\"type\":\"integer\", \"min\":1, \"max\":60}\n",
         "output_format = \"mp4\" # @param [\"mp4\", \"webm\"]\n",
+        "overwrite_previous_video = False # @param {type:\"boolean\"}\n",
         "\n",
         "import random\n",
         "seed = seed if seed != 0 else random.randint(0, 2**32 - 1)\n",
@@ -478,7 +489,8 @@
         "    scheduler=scheduler,\n",
         "    frames=frames,\n",
         "    fps=fps,\n",
-        "    output_format=output_format\n",
+        "    output_format=output_format,\n",
+        "    overwrite=overwrite_previous_video\n",
         ")\n",
         "clear_memory()"
       ],
