Modified to allow users decide if to overwrite previously generated videos.

--- a/Wan2_1_14B_I2V_GGUF_&_LoRA.ipynb
+++ b/Wan2_1_14B_I2V_GGUF_&_LoRA.ipynb
@@ -33,7 +33,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "cellView": "form",
         "id": "96675e45HYsu"
       },
       "outputs": [],
@@ -372,9 +371,14 @@
         "            gc.collect()\n",
         "\n",
         "            output_path = \"\"\n",
+        "            import datetime\n",
+        "            base_name = \"ComfyUI\"\n",
+        "            if not overwrite:\n",
+        "                timestamp = datetime.datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
+        "                base_name += f\"_{timestamp}\"\n",
         "            if frames == 1:\n",
         "                print(\"Single frame detected - saving as PNG image...\")\n",
-        "                output_path = save_as_image(decoded[0], \"ComfyUI\")\n",
+        "                output_path = save_as_image(decoded[0], base_name)\n",
         "                # print(f\"Image saved as PNG: {output_path}\")\n",
         "\n",
         "                display(IPImage(filename=output_path))\n",
@@ -383,7 +387,7 @@
         "                    print(\"Saving as WEBM...\")\n",
         "                    output_path = save_as_webm(\n",
         "                        decoded,\n",
-        "                        \"ComfyUI\",\n",
+        "                        base_name,\n",
         "                        fps=fps,\n",
         "                        codec=\"vp9\",\n",
         "                        quality=10\n",
@@ -391,11 +395,6 @@
         "                elif output_format.lower() == \"mp4\":\n",
         "\n",
         "                    print(\"Saving as MP4...\")\n",
-        "                    import datetime\n",
-        "                    base_name = \"ComfyUI\"\n",
-        "                    if not overwrite:\n",
-        "                        timestamp = datetime.datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
-        "                        base_name += f\"_{timestamp}\"\n",
         "\n",
         "                    output_path = save_as_mp4(decoded, base_name, fps)\n",
         "\n",
