--- a/Wan2_1_14B_I2V_GGUF_&_LoRA.ipynb
+++ b/Wan2_1_14B_I2V_GGUF_&_LoRA.ipynb
@@ -33,7 +33,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "96675e45HYsu"
+        "id": "96675e45HYsu",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
