--- a/Fast_Wan2_1_14B_I2V_480p_GGUF_&_LoRA.ipynb
+++ b/Fast_Wan2_1_14B_I2V_480p_GGUF_&_LoRA.ipynb
@@ -40,19 +40,26 @@
       "source": [
         "# @title Prepare Environment\n",
         "%cd /content\n",
-        "\n",
+        "from IPython.display import clear_output\n",
         "!pip install -q torchsde einops diffusers accelerate xformers triton sageattention\n",
         "!pip install av\n",
+        "clear_output()\n",
         "!git clone https://github.com/Isi-dev/ComfyUI\n",
+        "clear_output()\n",
         "%cd /content/ComfyUI/custom_nodes\n",
         "!git clone https://github.com/Isi-dev/ComfyUI_GGUF.git\n",
+        "clear_output()\n",
         "!git clone https://github.com/Isi-dev/ComfyUI_KJNodes.git\n",
+        "clear_output()\n",
         "%cd /content/ComfyUI/custom_nodes/ComfyUI_GGUF\n",
         "!pip install -r requirements.txt\n",
+        "clear_output()\n",
         "%cd /content/ComfyUI/custom_nodes/ComfyUI_KJNodes\n",
         "!pip install -r requirements.txt\n",
+        "clear_output()\n",
         "%cd /content/ComfyUI\n",
         "!apt -y install -qq aria2 ffmpeg\n",
+        "clear_output()\n",
         "\n",
         "useQ6 = False # @param {\"type\":\"boolean\"}\n",
         "\n",
@@ -164,11 +171,11 @@
         "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/city96/Wan2.1-I2V-14B-480P-gguf/resolve/main/wan2.1-i2v-14b-480p-Q6_K.gguf -d /content/ComfyUI/models/unet -o wan2.1-i2v-14b-480p-Q6_K.gguf\n",
         "else:\n",
         "    !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/city96/Wan2.1-I2V-14B-480P-gguf/resolve/main/wan2.1-i2v-14b-480p-Q4_0.gguf -d /content/ComfyUI/models/unet -o wan2.1-i2v-14b-480p-Q4_0.gguf\n",
-        "\n",
+        "clear_output()\n",
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/Comfy-Org/Wan_2.1_ComfyUI_repackaged/resolve/main/split_files/text_encoders/umt5_xxl_fp8_e4m3fn_scaled.safetensors -d /content/ComfyUI/models/text_encoders -o umt5_xxl_fp8_e4m3fn_scaled.safetensors\n",
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/Comfy-Org/Wan_2.1_ComfyUI_repackaged/resolve/main/split_files/vae/wan_2.1_vae.safetensors -d /content/ComfyUI/models/vae -o wan_2.1_vae.safetensors\n",
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/Comfy-Org/Wan_2.1_ComfyUI_repackaged/resolve/main/split_files/clip_vision/clip_vision_h.safetensors -d /content/ComfyUI/models/clip_vision -o clip_vision_h.safetensors\n",
-        "\n",
+        "clear_output()\n",
         "# Initialize nodes\n",
         "unet_loader = UnetLoaderGGUF()\n",
         "pathch_sage_attention = PathchSageAttentionKJ()\n",
@@ -315,7 +322,11 @@
         "    frames: int = 33,\n",
         "    fps: int = 16,\n",
         "    output_format: str = \"mp4\",\n",
-        "    overwrite: bool = False\n",
+        "    overwrite: bool = False,\n",
+        "    use_lora: bool = True,\n",
+        "    use_sage_attention: bool = True,\n",
+        "    enable_flow_shift: bool = True,\n",
+        "    shift: float = 8.0\n",
         "):\n",
         "\n",
         "    with torch.inference_mode():\n",
@@ -354,12 +365,16 @@
         "            model = unet_loader.load_unet(\"wan2.1-i2v-14b-480p-Q6_K.gguf\")[0]\n",
         "        else:\n",
         "            model = unet_loader.load_unet(\"wan2.1-i2v-14b-480p-Q4_0.gguf\")[0]\n",
-        "        model = model_sampling.patch(model, 8)[0]\n",
         "\n",
-        "        print(\"Loading Lora...\")\n",
-        "        model = load_lora.load_lora_model_only(model, lora, LoRA_Strength)[0]\n",
+        "        if enable_flow_shift:\n",
+        "            model = model_sampling.patch(model, shift)[0]\n",
         "\n",
-        "        model = pathch_sage_attention.patch(model, \"auto\")[0]\n",
+        "        if use_lora:\n",
+        "            print(\"Loading Lora...\")\n",
+        "            model = load_lora.load_lora_model_only(model, lora, LoRA_Strength)[0]\n",
+        "\n",
+        "        if use_sage_attention:\n",
+        "            model = pathch_sage_attention.patch(model, \"auto\")[0]\n",
         "\n",
         "        if rel_l1_thresh > 0:\n",
         "            print(\"Setting Teacache...\")\n",
@@ -481,7 +496,13 @@
         "output_format = \"mp4\" # @param [\"mp4\", \"webm\"]\n",
         "overwrite_previous_video = False # @param {type:\"boolean\"}\n",
         "# @markdown ---\n",
+        "# @markdown ### Model Configuration\n",
+        "use_sage_attention = True # @param {type:\"boolean\"}\n",
+        "use_flow_shift = True # @param {type:\"boolean\"}\n",
+        "flow_shift = 5 # @param {\"type\":\"slider\",\"min\":0.0,\"max\":100.0,\"step\":0.01}\n",
+        "# @markdown ---\n",
         "# @markdown ### LoRA Configuration\n",
+        "use_lora = True # @param {type:\"boolean\"}\n",
         "LoRA_Strength = 1.0 # @param {\"type\":\"slider\",\"min\":-100,\"max\":100,\"step\":0.01}\n",
         "# @markdown ---\n",
         "# @markdown ### Teacache Settings\n",
@@ -512,7 +533,11 @@
         "    frames=frames,\n",
         "    fps=fps,\n",
         "    output_format=output_format,\n",
-        "    overwrite=overwrite_previous_video\n",
+        "    overwrite=overwrite_previous_video,\n",
+        "    use_lora = use_lora,\n",
+        "    use_sage_attention = use_sage_attention,\n",
+        "    enable_flow_shift = use_flow_shift,\n",
+        "    shift = flow_shift\n",
         ")\n",
         "clear_memory()"
       ],
