The Hidream_GGUF_Q5 notebook was modified to generate sharper images.

--- a/Hidream_T2V_GGUF_Q5.ipynb
+++ b/Hidream_T2V_GGUF_Q5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "L4"
+      "gpuType": "T4"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,7 +16,7 @@
     "accelerator": "GPU",
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "6f61ca0191bc49df98b614abc35458a9": {
+        "8ed116d6942942509ebc9f4290c5c680": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
           "model_module_version": "1.5.0",
@@ -31,14 +31,14 @@
             "_view_name": "HBoxView",
             "box_style": "",
             "children": [
-              "IPY_MODEL_8e0bf916fd5f4ba8b52cfecbd1047384",
-              "IPY_MODEL_c71b49de09794bd18ee1a1f150425c2d",
-              "IPY_MODEL_a8355e5d985942548b8efd817a233352"
+              "IPY_MODEL_ebf8c89bf09d4360835a0636a8da223b",
+              "IPY_MODEL_1234b4f23d47408e93873d514b936daa",
+              "IPY_MODEL_a6611e8720a84253ab01f6edd2ec639f"
             ],
-            "layout": "IPY_MODEL_297107be190d4f2ebbaef0768addab2e"
+            "layout": "IPY_MODEL_f024d79073764568b64ad968d13adc95"
           }
         },
-        "8e0bf916fd5f4ba8b52cfecbd1047384": {
+        "ebf8c89bf09d4360835a0636a8da223b": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -53,13 +53,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_41778966957a419b96c398e209b87abc",
+            "layout": "IPY_MODEL_350e0ec6f0d14f319dd31ca946584428",
             "placeholder": "​",
-            "style": "IPY_MODEL_b0d033d4668d4c1d926f266f49548fbb",
+            "style": "IPY_MODEL_45b6f20c351c4dc69010697d2a439916",
             "value": "100%"
           }
         },
-        "c71b49de09794bd18ee1a1f150425c2d": {
+        "1234b4f23d47408e93873d514b936daa": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FloatProgressModel",
           "model_module_version": "1.5.0",
@@ -75,15 +75,15 @@
             "bar_style": "success",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_7d0522efda8945e9b4b5794173e2f76a",
+            "layout": "IPY_MODEL_bd29a34e74ac44b5a9841f01e14f2129",
             "max": 18,
             "min": 0,
             "orientation": "horizontal",
-            "style": "IPY_MODEL_7c843c68451148e59085e41b55ced4a3",
+            "style": "IPY_MODEL_a576235a8d51492d88b93a8a784b2551",
             "value": 18
           }
         },
-        "a8355e5d985942548b8efd817a233352": {
+        "a6611e8720a84253ab01f6edd2ec639f": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -98,13 +98,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_0a87aee5fefc4b8690da1525116754ce",
+            "layout": "IPY_MODEL_03ca5286c7254e418cb830d93648777b",
             "placeholder": "​",
-            "style": "IPY_MODEL_9c5d8d47d9dc4d7fa2bf58b92aea926e",
-            "value": " 18/18 [01:14&lt;00:00,  4.17s/it]"
+            "style": "IPY_MODEL_4a7c4765f56f441db854ddab85862229",
+            "value": " 18/18 [01:14&lt;00:00,  4.14s/it]"
           }
         },
-        "297107be190d4f2ebbaef0768addab2e": {
+        "f024d79073764568b64ad968d13adc95": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -156,7 +156,7 @@
             "width": null
           }
         },
-        "41778966957a419b96c398e209b87abc": {
+        "350e0ec6f0d14f319dd31ca946584428": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -208,7 +208,7 @@
             "width": null
           }
         },
-        "b0d033d4668d4c1d926f266f49548fbb": {
+        "45b6f20c351c4dc69010697d2a439916": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -223,7 +223,7 @@
             "description_width": ""
           }
         },
-        "7d0522efda8945e9b4b5794173e2f76a": {
+        "bd29a34e74ac44b5a9841f01e14f2129": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -275,7 +275,7 @@
             "width": null
           }
         },
-        "7c843c68451148e59085e41b55ced4a3": {
+        "a576235a8d51492d88b93a8a784b2551": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ProgressStyleModel",
           "model_module_version": "1.5.0",
@@ -291,7 +291,7 @@
             "description_width": ""
           }
         },
-        "0a87aee5fefc4b8690da1525116754ce": {
+        "03ca5286c7254e418cb830d93648777b": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -343,7 +343,7 @@
             "width": null
           }
         },
-        "9c5d8d47d9dc4d7fa2bf58b92aea926e": {
+        "4a7c4765f56f441db854ddab85862229": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -1222,7 +1222,7 @@
         "        print(f\"\\nError: {str(e)}\")\n",
         "        return False\n",
         "\n",
-        "hidream_version = \"dev\" # @param [\"fast\", \"dev\", \"full\"]\n",
+        "hidream_version = \"fast\" # @param [\"fast\", \"dev\", \"full\"]\n",
         "\n",
         "hidream_model = \"hidream-i1-dev-Q5_0.gguf\"\n",
         "\n",
@@ -1412,24 +1412,24 @@
       "metadata": {
         "cellView": "form",
         "id": "gHM0_hQFxWvB",
-        "outputId": "cef66b10-aea9-4be4-9fd3-867a007b6b51",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 685,
           "referenced_widgets": [
-            "6f61ca0191bc49df98b614abc35458a9",
-            "8e0bf916fd5f4ba8b52cfecbd1047384",
-            "c71b49de09794bd18ee1a1f150425c2d",
-            "a8355e5d985942548b8efd817a233352",
-            "297107be190d4f2ebbaef0768addab2e",
-            "41778966957a419b96c398e209b87abc",
-            "b0d033d4668d4c1d926f266f49548fbb",
-            "7d0522efda8945e9b4b5794173e2f76a",
-            "7c843c68451148e59085e41b55ced4a3",
-            "0a87aee5fefc4b8690da1525116754ce",
-            "9c5d8d47d9dc4d7fa2bf58b92aea926e"
+            "8ed116d6942942509ebc9f4290c5c680",
+            "ebf8c89bf09d4360835a0636a8da223b",
+            "1234b4f23d47408e93873d514b936daa",
+            "a6611e8720a84253ab01f6edd2ec639f",
+            "f024d79073764568b64ad968d13adc95",
+            "350e0ec6f0d14f319dd31ca946584428",
+            "45b6f20c351c4dc69010697d2a439916",
+            "bd29a34e74ac44b5a9841f01e14f2129",
+            "a576235a8d51492d88b93a8a784b2551",
+            "03ca5286c7254e418cb830d93648777b",
+            "4a7c4765f56f441db854ddab85862229"
           ]
-        }
+        },
+        "outputId": "d442e1c9-6136-413c-f3df-fffd43fa9f2a"
       },
       "execution_count": 2,
       "outputs": [
@@ -1454,7 +1454,7 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "6f61ca0191bc49df98b614abc35458a9"
+              "model_id": "8ed116d6942942509ebc9f4290c5c680"
             }
           },
           "metadata": {}
@@ -1549,7 +1549,6 @@
         "collapsed": true,
         "cellView": "form",
         "id": "C-Mt6P2DZ_U9",
-        "outputId": "05877d12-b9a1-4b2c-eed8-a66c0be71e0d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 960,
@@ -1566,7 +1565,8 @@
             "454336504e164014b18e2147ffbbc39f",
             "0c3f965ccb3647e2aff5f76fb14e7bf5"
           ]
-        }
+        },
+        "outputId": "05877d12-b9a1-4b2c-eed8-a66c0be71e0d"
       },
       "execution_count": 5,
       "outputs": [
@@ -1696,7 +1696,6 @@
       "metadata": {
         "cellView": "form",
         "id": "WlCU9T4R0bu5",
-        "outputId": "c0917007-2c33-4af5-ae88-f35eeafb05a5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000,
@@ -1713,7 +1712,8 @@
             "62e19b352448419b82eba0106112da4b",
             "baee31a5887542bd8e1635f207f0fa7f"
           ]
-        }
+        },
+        "outputId": "c0917007-2c33-4af5-ae88-f35eeafb05a5"
       },
       "execution_count": 7,
       "outputs": [
