Updated due to changes in dependencies

--- a/Hidream_T2V_GGUF_Q5.ipynb
+++ b/Hidream_T2V_GGUF_Q5.ipynb
@@ -1071,6 +1071,7 @@
       "source": [
         "# @title Setup Environment\n",
         "%cd /content\n",
+        "!pip install --upgrade --quiet torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118\n",
         "\n",
         "from IPython.display import clear_output\n",
         "# !pip install -q torchsde einops diffusers accelerate xformers\n",
@@ -1431,7 +1432,7 @@
         },
         "outputId": "d442e1c9-6136-413c-f3df-fffd43fa9f2a"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1546,7 +1547,6 @@
         ")\n"
       ],
       "metadata": {
-        "collapsed": true,
         "cellView": "form",
         "id": "C-Mt6P2DZ_U9",
         "colab": {
@@ -1568,7 +1568,7 @@
         },
         "outputId": "05877d12-b9a1-4b2c-eed8-a66c0be71e0d"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1715,7 +1715,7 @@
         },
         "outputId": "c0917007-2c33-4af5-ae88-f35eeafb05a5"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
