Updated due to changes in dependencies

--- a/Hidream_fp8.ipynb
+++ b/Hidream_fp8.ipynb
@@ -41,7 +41,7 @@
       "source": [
         "# @title Setup Environment\n",
         "%cd /content\n",
-        "\n",
+        "!pip install --upgrade --quiet torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118\n",
         "# !pip install -q torchsde einops diffusers accelerate xformers\n",
         "# !git clone https://github.com/comfyanonymous/ComfyUI\n",
         "!git clone https://github.com/Isi-dev/ComfyUI\n",
