Updated due to changes in dependencies

--- a/Fast_Wan2_1_14B_I2V_480p_GGUF_&_LoRA.ipynb
+++ b/Fast_Wan2_1_14B_I2V_480p_GGUF_&_LoRA.ipynb
@@ -39,6 +39,7 @@
       "outputs": [],
       "source": [
         "# @title Prepare Environment\n",
+        "!pip install --upgrade --quiet torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118\n",
         "%cd /content\n",
         "from IPython.display import clear_output\n",
         "!pip install -q torchsde einops diffusers accelerate xformers triton sageattention\n",
