--- a/Wan2_1_14B_I2V_GGUF_&_LoRA.ipynb
+++ b/Wan2_1_14B_I2V_GGUF_&_LoRA.ipynb
@@ -33,12 +33,12 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "96675e45HYsu",
-        "cellView": "form"
+        "id": "96675e45HYsu"
       },
       "outputs": [],
       "source": [
         "# @title Prepare Environment\n",
+        "!pip install --upgrade --quiet torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118\n",
         "%cd /content\n",
         "\n",
         "!pip install -q torchsde einops diffusers accelerate xformers\n",
