Updated due to changes in dependencies

--- a/Fast_Wan2_1_14B_I2V_480p_GGUF_&_LoRA.ipynb
+++ b/Fast_Wan2_1_14B_I2V_480p_GGUF_&_LoRA.ipynb
@@ -31,12 +31,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "cellView": "form",
-        "id": "96675e45HYsu"
+        "id": "96675e45HYsu",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c3551a3b-c2b4-432a-be8b-660a015063f0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ Environment Setup Complete!\n"
+          ]
+        }
+      ],
       "source": [
         "# @title Prepare Environment\n",
         "!pip install --upgrade --quiet torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118\n",
@@ -498,7 +510,7 @@
         "overwrite_previous_video = False # @param {type:\"boolean\"}\n",
         "# @markdown ---\n",
         "# @markdown ### Model Configuration\n",
-        "use_sage_attention = True # @param {type:\"boolean\"}\n",
+        "# use_sage_attention = False # @param {type:\"boolean\"}\n",
         "use_flow_shift = True # @param {type:\"boolean\"}\n",
         "flow_shift = 5 # @param {\"type\":\"slider\",\"min\":0.0,\"max\":100.0,\"step\":0.01}\n",
         "# @markdown ---\n",
