Updated due to changes in dependencies

--- a/Wan2_1_1_3B_T2V_Free.ipynb
+++ b/Wan2_1_1_3B_T2V_Free.ipynb
@@ -40,6 +40,7 @@
       "cell_type": "code",
       "source": [
         "# @title Prepare Environment\n",
+        "!pip install --upgrade --quiet torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118\n",
         "%cd /content\n",
         "\n",
         "!pip install -q torchsde einops diffusers accelerate xformers\n",
