Updated due to changes in dependencies

--- a/LTX_Video_Tx_to_Vid.ipynb
+++ b/LTX_Video_Tx_to_Vid.ipynb
@@ -41,6 +41,7 @@
       "cell_type": "code",
       "source": [
         "# @title Prepare Environment\n",
+        "!pip install --upgrade --quiet torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118\n",
         "%cd /content\n",
         "Always_Load_Models_for_Inference = False\n",
         "Use_t5xxl_fp16 = False\n",
