--- a/Fast_Wan2_1_14B_I2V_480p_GGUF_&_LoRA.ipynb
+++ b/Fast_Wan2_1_14B_I2V_480p_GGUF_&_LoRA.ipynb
@@ -31,14 +31,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "cellView": "form",
         "id": "96675e45HYsu",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c3551a3b-c2b4-432a-be8b-660a015063f0"
+        "outputId": "253dc0f4-0f32-4e4a-c991-404314535dd5"
       },
       "outputs": [
         {
@@ -511,6 +511,7 @@
         "# @markdown ---\n",
         "# @markdown ### Model Configuration\n",
         "# use_sage_attention = False # @param {type:\"boolean\"}\n",
+        "use_sage_attention = False\n",
         "use_flow_shift = True # @param {type:\"boolean\"}\n",
         "flow_shift = 5 # @param {\"type\":\"slider\",\"min\":0.0,\"max\":100.0,\"step\":0.01}\n",
         "# @markdown ---\n",
