Nothing much, just hiding the environment code.

--- a/Wan2_1_14B_T2V_GGUF_Free.ipynb
+++ b/Wan2_1_14B_T2V_GGUF_Free.ipynb
@@ -319,7 +319,8 @@
         "\n"
       ],
       "metadata": {
-        "id": "rrXFIT4fMfyJ"
+        "id": "rrXFIT4fMfyJ",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
