Cleaned up the IC-Edit Notebook

--- a/ICEdit.ipynb
+++ b/ICEdit.ipynb
@@ -777,7 +777,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# @title Upload Image/Video\n",
+        "# @title Upload Image\n",
         "\n",
         "file_uploaded = upload_file()\n",
         "display_upload = True # @param {type:\"boolean\"}\n",
@@ -797,7 +797,7 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
+        "# @title Edit Image\n",
         "\n",
         "positive_prompt=\"Add glasses to her face.\" # @param {\"type\":\"string\"}\n",
         "guidance=50 # @param {\"type\":\"slider\",\"min\":0.0,\"max\":100.0,\"step\":0.1}\n",
