Cleaned up the ICEdit Notebook.

--- a/ICEdit.ipynb
+++ b/ICEdit.ipynb
@@ -764,7 +764,7 @@
         "                    display(IPImage(filename=output_path2))\n",
         "\n",
         "        except Exception as e:\n",
-        "            print(f\"Error during upscaling/saving: {str(e)}\")\n",
+        "            print(f\"Error during Image Editing/saving: {str(e)}\")\n",
         "            raise\n",
         "        finally:\n",
         "            clear_memory()\n",
