--- a/LTXV_0_9_7_13B_Distilled_Image_to_Video.ipynb
+++ b/LTXV_0_9_7_13B_Distilled_Image_to_Video.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "L4"
+      "gpuType": "T4"
     },
     "kernelspec": {
       "name": "python3",
