Updated to ensure that image cropping does not occur.

--- a/LTXV_0_9_7_13B_Distilled_Image_to_Video.ipynb
+++ b/LTXV_0_9_7_13B_Distilled_Image_to_Video.ipynb
@@ -317,6 +317,14 @@
         "\n",
         "        noise = random_noise.get_noise(seed)[0]\n",
         "\n",
+        "        loaded_image = image_scaler.upscale(\n",
+        "            loaded_image,\n",
+        "            \"lanczos\",\n",
+        "            width,\n",
+        "            height,\n",
+        "            \"disabled\"\n",
+        "        )[0]\n",
+        "\n",
         "        try:\n",
         "\n",
         "            print(\"Generating video...\")\n",
